Prevent footer from covering body content on mobile devices.

--- a/app/assets/stylesheets/browse_collections.css
+++ b/app/assets/stylesheets/browse_collections.css
@@ -1,5 +1,10 @@
+.browse-card .data .content {
+    background-color: #fff;
+}
+
 .browse-card .wrapper {
     min-height: 285px;
+    margin-bottom: 2em;
 }
 
 .browse-header {
